# splinter

./: .gitignore  CMakeLists.txt
cmake/: FindLibConfig.cmake  FindLibEvent.cmake  FindLibEvhtp.cmake  FindLibJansson.cmake  FindLibNghttp2.cmake  FindLibWslay.cmake
helpers/: Dockerfile  README.md  build.sh
main/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  app.c  app.cpp  app.h  app.hpp  conn.c  conn.h  prog_args.c  prog_args.h  prog_config.c  prog_config.h
src/http_parser/: http_parser.c  http_parser.h
src/utils/: base64.c  hashmap.c  inthash.c  llist.c  llist.h  longhash.c  longhash.h  ws_magic.c  ws_magic.h
tests/: CMakeLists.txt  check_base64.c  check_hashmap.c  check_llist.c  check_longhash.c
