CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT(splinter C CXX)

SET(CMAKE_MODULE_PATH
    "${PROJECT_SOURCE_DIR}/cmake"
    "${CMAKE_MODULE_PATH}"
)

FIND_PACKAGE(CURL REQUIRED)
FIND_PACKAGE(OpenSSL REQUIRED)
FIND_PACKAGE(LibEvent REQUIRED)
FIND_PACKAGE(LibWslay REQUIRED)
FIND_PACKAGE(LibConfig REQUIRED)
FIND_PACKAGE(LibNghttp2 REQUIRED)
FIND_PACKAGE(LibJansson REQUIRED)

INCLUDE_DIRECTORIES(CURL_INCLUDE_DIRS)
INCLUDE_DIRECTORIES(OPENSSL_INCLUDE_DIR)
INCLUDE_DIRECTORIES(LIBEVENT_INCLUDE_DIR)
INCLUDE_DIRECTORIES(LIBWSLAY_INCLUDE_DIR)
INCLUDE_DIRECTORIES(LIBCONFIG_INCLUDE_DIR)
INCLUDE_DIRECTORIES(LIBNGHTTP2_INCLUDE_DIR)

INCLUDE_DIRECTORIES(src)

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(main)

IF(SPLINTER_TESTS)
	ENABLE_TESTING()
ENDIF()

ADD_SUBDIRECTORY(tests)

