
IF(SPLINTER_TESTS)
	FIND_PACKAGE(Check REQUIRED)
	ENABLE_TESTING()
	SET(all_tests "")
	SET(LIBS ${LIBS} ${CHECK_LIBRARIES} m rt subunit)
	MACRO(ADD_SPLINTER_TEST NAME)
		LIST(APPEND all_tests ${NAME})
		ADD_EXECUTABLE(${NAME} ${NAME}.c)
		TARGET_LINK_LIBRARIES(${NAME} "${PROJECT_NAME}_lib" ${LIBS})
		ADD_TEST(NAME ${NAME} COMMAND ${NAME})
	ENDMACRO(ADD_SPLINTER_TEST)

	ADD_SPLINTER_TEST(check_hashmap)
	ADD_SPLINTER_TEST(check_inthash)
	ADD_SPLINTER_TEST(check_longhash)
	ADD_SPLINTER_TEST(check_llist)
	ADD_SPLINTER_TEST(check_queue)
	ADD_SPLINTER_TEST(check_base64)
	ADD_SPLINTER_TEST(check_ws_magic)
ENDIF()

